--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,11 @@
-brotlipy==0.7.0
-certifi==2020.6.20
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.2
-cryptography==2.9.2
-Flask==1.1.2
-gunicorn==20.0.4
-idna
+Flask==1.1.1
+gunicorn==19.9.0
 itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib
+Jinja2==2.10.1
 MarkupSafe==1.1.1
-mkl-fft
-mkl-random
-numpy==1.18.5
-pycparser
-pyOpenSSL
-PySocks==1.7.1
-requests
-scikit-learn
-scipy
-six==1.15.0
-threadpoolctl
-urllib3==1.25.9
-Werkzeug==1.0.1
-win-inet-pton==1.1.0
-wincertstore==0.2
+Werkzeug==0.15.5
+numpy>=1.9.2
+scipy>=0.15.1
+scikit-learn>=0.18
+matplotlib>=1.4.3
+pandas>=0.19
